# RaspberryPi5-WebRTC

./: README.md  cert.crt  cert.csr  cert.key  keypair.key  pyproject.toml
static/: client.js
templates/: index.html
webrtc_async_webcam_opencv/: main.py
