[tool.poetry]
name = "webrtc_async_webcam_opencv"
version = "0.1.0"
description = ""
authors = ["Nagy Dominik <dominik.nagy@irfsolutions.at>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
aiortc = "^1.3.2"
loguru = "^0.6.0"
numpy = "^1.23.1"
opencv-python-headless = "^4.6.0"
aiohttp_cors = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.32.0"
toml = "^0.10.2"
rich = "^12.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
